# omeka-s-mcp-sample

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
server/: omeka_server.py
server/omeka/: __init__.py  client.py  config.py  tools.py
